syntax = "proto3";

package token_bucket;

service TokenProvider {
  rpc BookToken (BookingRequest) returns (BookingResponse);
}

message BookingRequest {
  string clientId = 1;
}

message BookingResponse {
  string token = 1;
}